examples/test/testpolicy5497.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5497
  namespace: namespace365
spec:
  podSelector:
    matchLabels:
      key37: value31
      key5: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value0
          key1: value48
      podSelector:
        matchLabels:
          key36: value14
